# darling

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  compiletests.sh  out.rs  publish.sh  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  compiletests.yml
core/: Cargo.toml
core/src/: ast.rs  derive.rs  derive_fns.rs  error.rs  errors.rs  from_attributes.rs  from_data.rs  from_derive_input.rs  from_field.rs  from_generics.rs  from_meta.rs  from_meta_item.rs  from_type_param.rs  from_variant.rs  ident_list.rs  lib.rs  macros_private.rs  macros_public.rs  parses_attribute.rs  serde.rs  type_params.rs
core/src/ast/: data.rs  generics.rs  meta.rs  mod.rs  type_param_bounds.rs
core/src/ast/data/: mod.rs  nested_meta.rs
core/src/codegen/: attr_extractor.rs  attrs_field.rs  default_expr.rs  enum_impl.rs  error.rs  field.rs  fmi_impl.rs  from_attributes_impl.rs  from_derive_impl.rs  from_field.rs  from_meta_impl.rs  from_none.rs  from_type_param.rs  from_variant_impl.rs  generics.rs  ident_field.rs  mod.rs  outer_from_impl.rs  parses_attribute.rs  trait_impl.rs  transparent.rs  variant.rs  variant_data.rs  wrap_in_const.rs
core/src/error/: kind.rs  mod.rs  util.rs
core/src/options/: container.rs  core.rs  field.rs  forward_attrs.rs  forwarded_field.rs  from_attributes.rs  from_derive.rs  from_field.rs  from_meta.rs  from_meta_item.rs  from_type_param.rs  from_variant.rs  input_field.rs  input_generics.rs  input_variant.rs  meta_item_field.rs  mod.rs  outer_from.rs  parses_attribute.rs  shape.rs  variant.rs
core/src/usage/: ident_set.rs  lifetimes.rs  mod.rs  type_params.rs
core/src/util/: body.rs  callable.rs  expr_verbatim.rs  extract_option.rs  flag.rs  ident_field.rs  ident_list.rs  ident_set.rs  ident_string.rs  ignored.rs  mod.rs  over_ride.rs  parse_attribute.rs  path_list.rs  path_to_string.rs  preserved_str_expr.rs  require_ident.rs  shape.rs  spanned_value.rs  variant_data.rs  with_original.rs  wrap_in_const.rs
core/src/util/ident_string/: mod.rs  serde.rs
examples/: automatic_bounds.rs  consume_fields.rs  derive.rs  enum_of_struct_variants.rs  fallible_read.rs  from_word_and_expr.rs  generics.rs  html.rs  serde.rs  shorthand_or_long_field.rs  supports_struct.rs
macro/: Cargo.toml  LICENSE
macro/src/: lib.rs
src/: lib.rs  macros_public.rs
tests/: accrue_errors.rs  compiletests.rs  custom_bound.rs  custom_crate.rs  custom_data.rs  data_with_string_path.rs  defaults.rs  enums_newtype.rs  enums_struct.rs  enums_unit.rs  error.rs  flatten.rs  flatten_from_field.rs  from_generics.rs  from_meta.rs  from_type_param.rs  from_type_param_default.rs  from_variant.rs  generics.rs  generics_with.rs  happy_path.rs  ident_with.rs  meta_with.rs  multiple.rs  newtype.rs  non_from_meta_implementation.rs  override_callable.rs  skip.rs  split_declaration.rs  suggestions.rs  supports.rs  transparent.rs  with_no_impl_from_meta.rs
tests/compile-fail/: attr_forwarded_and_parsed.rs  attr_forwarded_and_parsed.stderr  attrs_with_bad_fn.stderr  custom_crate_incorrect_path.rs  custom_crate_incorrect_path.stderr  custom_crate_omitted.rs  custom_crate_omitted.stderr  data_missing_tryfrom.rs  data_missing_tryfrom.stderr  default_expr_bad_arg.rs  default_expr_bad_arg.stderr  duplicate_word_accross_variants.rs  duplicate_word_accross_variants.stderr  duplicate_word_across_variants.stderr  duplicate_word_on_variant.rs  from_expr.rs  from_expr.stderr  from_word.stderr  generics_magic_field_missing_impl.rs  generics_magic_field_missing_impl.stderr  ident_with_wrong_param_type.rs  ident_with_wrong_param_type.stderr  ident_with_wrong_ret_type.rs  ident_with_wrong_ret_type.stderr  no_ident.rs  no_ident.stderr  not_impl_from_meta.stderr  parse_meta.stderr  parse_meta_invalid_receiver.rs  parse_meta_invalid_receiver.stderr  parse_meta_no_type.rs  parse_meta_no_type.stderr  transparent_extra.rs  transparent_extra.stderr  with_closure_capture.stderr  word_on_wrong_variant_type.rs
tests/compile-pass/: parse_meta.rs
tests/compile-success/: readme_example.rs
