[package]
name = "darling"
version = "0.13.4"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/darling"
documentation = "https://docs.rs/darling/0.13.4"
description = """
A proc-macro library for reading attributes into structs when
implementing custom derives.
"""
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = ["/.travis.yml", "/publish.sh", "/.github/**"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
darling_core = { version = "=0.13.4", path = "core" }
darling_macro = { version = "=0.13.4", path = "macro" }

[dev-dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.69"

[features]
default = ["suggestions"]
diagnostics = ["darling_core/diagnostics"]
suggestions = ["darling_core/suggestions"]

[workspace]
members = ["macro", "core"]
