[package]
name = "darling"
version = "0.20.9"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/darling"
documentation = "https://docs.rs/darling/0.20.9"
description = """
A proc-macro library for reading attributes into structs when
implementing custom derives.
"""
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.56"
exclude = ["/.travis.yml", "/publish.sh", "/.github/**"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
darling_core = { version = "=0.20.9", path = "core" }
darling_macro = { version = "=0.20.9", path = "macro" }

[dev-dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = "2.0.15"

[target.'cfg(compiletests)'.dev-dependencies]
rustversion = "1.0.9"
trybuild = "1.0.38"

[features]
default = ["suggestions"]
diagnostics = ["darling_core/diagnostics"]
suggestions = ["darling_core/suggestions"]

[workspace]
members = ["macro", "core"]
