[package]
name = "darling_core"
version = "0.14.4"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/darling"
description = """
Helper crate for proc-macro library for reading attributes into structs when
implementing custom derives. Use https://crates.io/crates/darling in your code.
"""
license = "MIT"
edition = "2018"

[features]
diagnostics = []
suggestions = ["strsim"]

[dependencies]
ident_case = "1.0.1"
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = { version = "1.0.91", features = ["full", "extra-traits"] }
fnv = "1.0.7"
strsim = { version = "0.10.0", optional = true }
