[package]
name = "darling_core"
version = "0.22.0"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/darling"
description = """
Helper crate for proc-macro library for reading attributes into structs when
implementing custom derives. Use https://crates.io/crates/darling in your code.
"""
license = "MIT"
edition = "2021"
rust-version = "1.56.0"

[features]
diagnostics = []
suggestions = ["strsim"]

[dependencies]
ident_case = "1.0.1"
proc-macro2 = "=1.0.86"                                           # 1.0.103 bumped MSRV to 1.60.0
quote = "=1.0.40"                                                 # 1.0.41 bumped MSRV to 1.60.0
serde = { version = "1.0.210", optional = true }
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
strsim = { version = "0.11.1", optional = true }

[dev-dependencies]
serde_json = "1.0.140"
