[package]
name = "darling_macro"
version = "0.14.4"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/darling"
description = """
Internal support for a proc-macro library for reading attributes into structs when
implementing custom derives. Use https://crates.io/crates/darling in your code.
"""
license = "MIT"
edition = "2018"

[dependencies]
quote = "1.0.18"
syn = "1.0.91"
darling_core = { version = "=0.14.4", path = "../core" }

[lib]
proc-macro = true
