[package]
name = "darling_macro"
version = "0.23.0"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/darling"
description = """
Internal support for a proc-macro library for reading attributes into structs when
implementing custom derives. Use https://crates.io/crates/darling in your code.
"""
license = "MIT"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
quote = "1.0.18"
syn = "2.0.15"
darling_core = { version = "=0.23.0", path = "../core" }

[lib]
proc-macro = true
